--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -7,10 +7,7 @@
 .signupForm {
   display: flex;
   flex-direction: column;
-  background-color: #dff4f3;
-  padding: 30px;
   margin: 30px 20px 0 20px;
-  border-radius: 30px 0;
 }
 
 .signupForm input {
@@ -24,7 +21,10 @@
 .contentContainer {
   display: flex;
   flex-direction: column;
+  background-color: #dff4f3;
   align-items: center;
+  padding: 30px;
+  border-radius: 30px 0;
 }
 
 .contentContainer h2 {
@@ -60,4 +60,53 @@
 
 .contentContainer .signinBtn:hover {
   background-color: #aef3f0;
+}
+
+.redirectLinks {
+  display: flex;
+  flex-direction: column;
+}
+
+.redirectLinks h3 {
+  text-align: center;
+  font-family: "Caveat", cursive;
+  font-weight: 400;
+  font-size: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.redirectLinks div {
+  padding: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  border-radius: 15px 15px 0 0;
+  width: 300px;
+  height: 195.2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  margin-top: 30px;
+}
+
+.menstrualLink {
+  background-image: url("../../images/periodTracking2.jpg");
+}
+
+.contraceptiveLink {
+  background-image: url("../../images/bcTracking.jpg");
+}
+
+.resourceLink {
+  background-image: url("../../images/pexels-cottonbro-6471424.jpg");
+}
+
+@media screen and (min-width: 1030px) {
+  .redirectLinks {
+    flex-direction: row;
+  }
 }
